# dolt-annex

./: .gitignore  .gitmodules  CONCEPTS.md  DESIGN.md  Dockerfile  README  README.md  action.yaml  annex.py  application.py  bup  bup_main.py  config.py  context.py  db.py  dolt.py  downloader.py  dry_run.py  example_config.json  git.py  logger.py  main.py  migrate_storage.py  move_functions.py  pyproject.toml  pytest.toml  remote.py  requirements.txt  setup.sql  sql.py  table_settings.py  tables.py  type_hints.py
bup_ext/: bup_ext.py  patch.py
cmd/: bup
commands/: download.py  import_command.py  init.py  pull.py  push.py  scan_annex.py  server_command.py  sync.py
docker/: setup.sh  test.sh
docs/: concepts.md
dolt_annex/: __init__.py  annex.py  application.py  config.py  dolt.py  downloader.py  git.py  sql.py  table.py  table_settings.py
example_config/: example_config.json  example_config.json5  example_config_test.py  file_archive.dataset  gallery_dl.dataset  local.remote  sftp.remote  submissions.table
src/: pyproject.toml  requirements.txt
src/dolt_annex/: __init__.py  __main__.py  application.py  config.py  conftest.py  context.py  dolt.py  logger.py  move_functions.py  table.py
src/dolt_annex/commands/: __init__.py  gallery_dl.py  gallery_dl_command.py  gallery_dl_command_test.py  import_command.py  init.py  insert_record.py  insert_record_test.py  pull.py  pull_test.py  push.py  push_test.py  server_command.py  sync.py
src/dolt_annex/commands/config/: create.py  create_test.py
src/dolt_annex/commands/dataset/: __init__.py  insert_record.py  insert_record_test.py  read_table.py
src/dolt_annex/commands/filestore/: __init__.py  copy.py  insert.py  insert_test.py  whereis.py  whereis_test.py
src/dolt_annex/commands/sync/: pull.py  pull_test.py  push.py  push_test.py
src/dolt_annex/data/dolt_base/.dolt/: config.json  repo_state.json
src/dolt_annex/data/dolt_base/.dolt/noms/: vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
src/dolt_annex/data/dolt_base/.dolt/stats/.dolt/noms/: journal.idx
src/dolt_annex/data/dolt_base/.doltcfg/: branch_control.db
src/dolt_annex/datatypes/: __init__.py  async_utils.py  common.py  config.py  file_io.py  loader.py  pydantic.py  remote.py  repo.py  table.py
src/dolt_annex/file_keys/: __init__.py  base.py  common.py  sha256e.py
src/dolt_annex/filestore/: README.md  __init__.py  annexfs.py  archivefs.py  base.py  cas.py  common.py  file_handles.py  filestore_test.py  leveldb.py  measure.py  memory.py  sftp.py  union.py  unionfs.py
src/dolt_annex/gallery_dl/: __init__.py  gallery_dl_config.json  postprocessors.py  skip.sqlite3  sources.py
src/dolt_annex/gallery_dl/sources/: __init__.py  ao3.py  base.py  furaffinity.py  itaku.py
src/dolt_annex/gallery_dl_plugin/: __init__.py  gallery_dl_config.json  postprocessors.py
src/dolt_annex/gallery_dl_plugin/sources/: base.py  furaffinity.py  itaku.py  pixiv.py  weasyl.py
src/dolt_annex/importers/: base.py  gallery_dl.py  gallerydl.py
src/dolt_annex/server/: sftp.py  ssh.py
src/dolt_annex/sync/: __init__.py
src/dolt_annex/test_util/: __init__.py  fixtures.py  io.py
src/dolt_annex/test_util/test_keys/: id_ed25519  id_ed25519.pub
(+49 files in other folders)
