[tool.poetry]
name = "dolt_annex"
version = "0.4.0"
description = ""
authors = ["Featherbutt <admin@featherbutt.com>"]
include = [
    { path = "dolt_annex/gallry_dl/gallery_dl_config.json", format = ["sdist", "wheel"] },
    { path = "dolt_annex/gallry_dl/skip.sqlite3", format = ["sdist", "wheel"] },
    { path = "dolt_annex/data/", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = "^3.10"
typing-extensions = "^4.15.0"
plumbum = "^1.9.0"
pymysql = "^1.1.2"
types-pymysql = "^1.1.0.20250916"
requests = "^2.32.5"
gallery-dl = {git = "https://github.com/featherbutt/gallery-dl"}
tzdata = "^2025.2"
pydantic = "^2.12.3"
asyncssh = "^2.21.1"
pytest-dotenv = "^0.5.2"
pytest-asyncio = "^1.3.0"
fs = {git = "https://github.com/milahu/pyfilesystem2", rev = "6ba132f"}
pyjson5 = "^2.0.0"
plyvel = {version = "^1.5.1", optional = true}

[tool.poetry.scripts]
dolt-annex = 'dolt_annex:main'

[tool.poetry.extras]
leveldb = ["plyvel"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]
